# rust-fastcgi-server

./: Cargo.toml  Readme.md
src/: main.rs
src/http/: fastcgi.rs  handler.rs  request_parser.rs  static_file.rs
