[package]
name = "fastcgi-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastcgi-client = "0.9.0"
tokio = { version = "1.40.0", features = ["full"] }
mime_guess = "2.0.5"
clap = { version = "4.0", features = ["derive"] }
log = "0.4.22"
anyhow = "1.0.92"
